force-app/main/default/objects/ssot__CareProgramAssistance__dlm/fields/ssot__CareProgramProductId__c.field-meta.xml
<CustomField>
    <fullName>ssot__CareProgramProductId__c</fullName>
    <label>Care Program Product</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CareProgramProductId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>