force-app/main/default/objects/ssot__CareProgramAssistance__dlm/fields/ssot__ProgramId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProgramId__c</fullName>
    <label>Program</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProgramId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>