force-app/main/default/objects/ssot__CareProgramAssistance__dlm/fields/ssot__rel_1722508391635_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1722508391635_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CareProgramAssistance_CareProgramPro_rel</label>
    <referenceTo>ssot__CareProgramProduct__dlm</referenceTo>
    <relationshipLabel>CareProgramAssistance_CareProgramPro_rel</relationshipLabel>
    <relationshipName>rel_1722508391635_end</relationshipName>
    <type>Lookup</type>
</CustomField>