force-app/main/default/objects/ssot__CareProgramAssistance__dlm/fields/ssot__rel_1722508693253_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1722508693253_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CareProgramAssistance_ProgramId_map__rel</label>
    <referenceTo>ssot__Program__dlm</referenceTo>
    <relationshipLabel>CareProgramAssistance_ProgramId_map__rel</relationshipLabel>
    <relationshipName>rel_1722508693253_end</relationshipName>
    <type>Lookup</type>
</CustomField>